k8s-yaml/restful-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
  namespace: ${CICD_GIT_REPO_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
  template:
    metadata:
      labels:
        app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
    spec:
      imagePullSecrets:
      - name: harbor-local
      containers:
      - name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-${CICD_GIT_COMMIT}
        image: ${CICD_IMAGE}:${CICD_GIT_BRANCH}-${CICD_GIT_COMMIT}
        ports:
        - containerPort: 5000
