k8s-yaml/restful-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-ing
  namespace: ${CICD_GIT_REPO_NAME}
spec:
#
  rules:
  - host: "${CICD_GIT_REPO_NAME}.${CICD_GIT_BRANCH}.172.16.0.171.xip.io"
    http:
      paths:
      - backend:
          serviceName: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-svc
          servicePort: 80
        path: "/"
        pathType: "ImplementationSpecific"
